# Projet-4-Classifiez-automatiquement-des-informations

./: 1_notebook.ipynb  2_notebook.ipynb  README.md  data_utils.py  graph.py  main.py  modelization.py  preprocessing.py  pyproject.toml  redundancy_analysis.py  visualizer.py
docs/: contexte.md
