[project]
name = "projet-4"
version = "0.1.0"
description = "Classifiez automatiquement des informations"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.3",
    "matplotlib>=3.10.8",
    "numba>=0.63",
    "numpy>=1.26,<2.4",
    "pandas>=3.0.0",
    "pillow>=12.1.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "shap>=0.50",
    "tqdm>=4.67.1",
    "xgboost>=3.1.3",
]
